# llvm-jit-objc

./: .gitignore  CMakeLists.txt  Makefile  README.md
CustomXCTestRunner/: .gitignore  CMakeLists.txt  CustomXCTestRunner.h  CustomXCTestRunner.m  Makefile
CustomXCTestRunner/CustomXCTestRunnerObjC/CustomXCTestRunnerObjC/: main.m
CustomXCTestRunner/CustomXCTestRunnerObjC/CustomXCTestRunnerObjC.xcodeproj/: project.pbxproj
fixtures/: Makefile
fixtures/001_minimal_test/: 001_minimal_test.m
fixtures/002_calling_class_method/: 002_calling_class_method.m
fixtures/003_calling_a_super_method_on_instance/: 003_calling_a_super_method_on_instance.m
fixtures/004_calling_a_super_method_on_class/: 004_calling_a_super_method_on_class.m
fixtures/005_ivars_of_class_and_superclass/: 005_ivars_of_class_and_superclass.m
fixtures/006_properties_of_class_and_superclass/: 006_properties_of_class_and_superclass.m
fixtures/007_category_basic/: 007_category_basic.m
fixtures/xctest_objc_001_minimal_xctestcase_run/: xctest_objc_001_minimal_xctestcase_run.m
fixtures/xctest_swift_001_minimal_xctestcase_run/: Makefile  MinimalSwiftXCTestCase.swift
googletest/: CMakeLists.txt
llvm-jit-objc/: CMakeLists.txt  LLVM.toolchain.macos.cmake  Makefile
llvm-jit-objc/googletest/: CMakeLists.txt
llvm-jit-objc/llvm-jit-objc/: CMakeLists.txt  LLVM.cmake
llvm-jit-objc/llvm-jit-objc/src/: CMakeLists.txt
llvm-jit-objc/llvm-jit-objc/src/include/: CMakeLists.txt
llvm-jit-objc/llvm-jit-objc/src/include/llvm-jit-objc/: DebugUtils.h  SwiftRuntimeSetup.h
llvm-jit-objc/llvm-jit-objc/src/lib/: CMakeLists.txt  ObjCResolver.cpp  ObjCRuntime.cpp  ObjCRuntimeHelpers.cpp  ObjCType.cpp  ObjCType.mm  SwiftRuntimeSetup.cpp
llvm-jit-objc/llvm-jit-objc/tests/: CMakeLists.txt  ObjCTest.cpp  SandboxTest.cpp  TestHelpers.h  XCTestObjCTest.cpp  XCTestSwiftTest.cpp
llvm-jit-objc/src/: CMakeLists.txt  ObjCEnabledMemoryManager.cpp  ObjCEnabledMemoryManager.h  ObjCResolver.cpp  ObjCResolver.h  ObjCRuntime.h  ObjCRuntime.mm  ObjCRuntimeHelpers.mm  ObjCType.h
llvm-jit-objc/src/Tests/: ObjCTest.cpp  SandboxTest.cpp  XCTestObjCTest.cpp  XCTestSwiftTest.cpp
llvm-jit-objc/src/include/llvm-jit-objc/: ObjCRuntimeHelpers.h  SwiftRuntimeSetup.h
llvm-jit-objc/src/lib/: ObjCEnabledMemoryManager.cpp
llvm-jit-objc/tests/: CMakeLists.txt  CustomXCTestRunnerBinding.cpp  CustomXCTestRunnerBinding.h  ObjCTest.cpp  TestHelpers.cpp  XCTestObjCTest.cpp  XCTestSwiftTest.cpp
